<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.dhamma.sg.TimerFragment" >

    
    <TextView
        android:id="@+id/section_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textTimerCounter"
        android:layout_alignParentTop="true"
        android:text="@string/title_section1" 
        style="@style/PageTitle"
        android:gravity="center"/>

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/lbl_start" />

    <TextView
        android:id="@+id/textTimerCounter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/section_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/lbl_1hr"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="60sp" />

</RelativeLayout>
